--- a/knn.Rmd
+++ b/knn.Rmd
@@ -83,7 +83,7 @@ As a nice illustration of our prediction problem, we can use `qmap()` to build a
 
 ```{r,  message=FALSE, warning=FALSE}
 bbox <- c(left = -87.896805, bottom = 41.677015, right = -87.409286, top = 42.082936)
-map <- get_stamenmap(bbox = bbox, zoom = 12, maptype = "toner-hybrid")
+map <- get_stadiamap()(bbox = bbox, zoom = 12, maptype = "toner-hybrid")
 map <- ggmap(map)
 ```
 
