--- a/assignment4-1.qmd
+++ b/assignment4-1.qmd
@@ -1,8 +1,7 @@
 ---
-title: 'Assignment 4: Interpretation and Bias Considerations in ML'
-output:
-  html_document:
-    df_print: paged
+title: "Assignment 4: Namit Shrivastava"
+format: pdf
+editor: visual
 ---
 
 ## Setup
